// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 결과페이지 결과설명 1`] = `
<div
  className="sc-gKAaRy gcokxO"
>
  <div
    className="img"
  >
    <img
      alt="INFP"
      src="sample_icon1.png"
    />
  </div>
  <p>
    "
    커피 한잔 할래요?
    "
  </p>
  <div
    className="desc"
  >
    <span
      className="title"
    >
      멋진 
      아메리카노
      !
    </span>
    <ul>
      <li>
        좋은점 1
      </li>
      <li>
        좋은점 2
      </li>
      <li>
        좋은점 3
      </li>
    </ul>
  </div>
  <div
    className="desc"
  >
    <span
      className="title"
    >
      이런건 좀..
    </span>
    <ul>
      <li>
        별로인점 1
      </li>
      <li>
        별로인점 2
      </li>
      <li>
        별로인점 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots 결과페이지 결과타이틀 1`] = `
<div
  className="sc-iCoGMd cESuKw"
>
  <p>
    나의 유형은?
  </p>
  <h1>
    낭만적인 아메리카노
  </h1>
</div>
`;

exports[`Storyshots 결과페이지 궁합결과 1`] = `
<div
  className="sc-fujyAs gEdAaO"
>
  <ul>
    <li>
      <p>
        같이 마실래?
      </p>
      <div
        className="box"
      >
        <span>
          라떼는 말이야 카페라떼
        </span>
        <div
          className="img"
        >
          <img
            alt="라떼는 말이야 카페라떼"
            src="sample_icon1.png"
          />
        </div>
      </div>
    </li>
    <li>
      <p>
        따로 마시자..
      </p>
      <div
        className="box"
      >
        <span>
          상냥한 유자차
        </span>
        <div
          className="img"
        >
          <img
            alt="상냥한 유자차"
            src="sample_icon1.png"
          />
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots 로딩페이지 Default 1`] = `
<div
  className="sc-gtsrHT cLodqc"
>
  <div
    className="img"
  >
    <img
      alt="loading"
      src="loading.gif"
    />
  </div>
  <h2>
    유형 분석중...
  </h2>
</div>
`;

exports[`Storyshots 인트로페이지 Default 1`] = `
<div
  className="sc-bdnxRM ksJKVU"
>
  <h1>
    테스트 제목
  </h1>
  <p>
    테스트 부제
  </p>
  <img
    alt="테스트 제목"
    src="sample_icon1.png"
  />
  <button
    onClick={[Function]}
  >
    테스트 시작
  </button>
</div>
`;

exports[`Storyshots 질문페이지 답안선택영역 1`] = `
<div
  className="sc-hKFxyN cdoteG"
>
  <button
    className="sc-eCApnc gAREIc"
    onClick={[Function]}
  >
    이렇게 한다.
  </button>
  <button
    className="sc-eCApnc gAREIc"
    onClick={[Function]}
  >
    저렇게 한다.
  </button>
</div>
`;

exports[`Storyshots 질문페이지 진행상황바 1`] = `
<div
  className="sc-jSFjdj iyiLtb"
>
  <span
    className="text"
  >
    8/10
  </span>
  <div
    className="bar-box"
  >
    <div
      className="bar"
      style={
        Object {
          "width": "80%",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots 질문페이지 질문텍스트 1`] = `
<div
  className="sc-dlnjwi hBOZZn"
>
  <p>
    Q
    1
  </p>
  <h2>
    <span>
      질문입니다.
      <br />
    </span>
    <span>
      이런상황에서
      <br />
    </span>
    <span>
      당신의 선택은?
      <br />
    </span>
  </h2>
</div>
`;
